<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_anchor_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Home">

    <include layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <Button
            android:id="@+id/films_button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sg_films"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/locations_button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sg_locations"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/people_button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sg_people"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/species_button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sg_species"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/vehicles_button"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sg_vehicles"
            android:textAllCaps="false"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

</RelativeLayout>